--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
-numpy>=1.21.0
-tqdm>=4.62.0
-google-generativeai>=0.3.0 
+torch>=1.7.0
+transformers>=4.5.0
+datasets>=1.5.0
+numpy>=1.19.2
+tqdm>=4.50.0
+scikit-learn>=0.24.0
+pandas>=1.2.0
+matplotlib>=3.3.0
+seaborn>=0.11.0
+pytest>=6.0.0
+black>=21.5b2
+flake8>=3.9.0 
